# engineering-test

./: .gitignore  README.md  engineering-test.cabal  flake.nix
docs/: assignment.md  instructions.md  notes.md
src/: App.hs  Scheduler.hs  Settings.hs  Types.hs
src/Processor/: Execution.hs  Request.hs  Task.hs
