cabal-version:      3.4
name:               engineering-test
version:            0.1.0.0
synopsis:           Async Job Queue Takehome Project
author:             Heneli Kailahi
maintainer:         foobarbaz@example.com
build-type:         Simple

common warnings
    ghc-options:
        -Wall
        -threaded

library
    import:           warnings
    exposed-modules:
        App,
        Processor.Execution,
        Processor.Request,
        Processor.Task,
        Scheduler,
        Settings,
        Types
    -- Modules included in this library but not exported.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   src
    default-language: GHC2021
    build-depends:
        base ^>=4.17.2.1,
        lens,
        optparse-generic,
        relude,
        stm-chans,
        unliftio,
        uuid,

executable engineering-test
    import:           warnings
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
    default-language: GHC2021
    build-depends:
        base ^>=4.17.2.1,
        engineering-test,
        relude

test-suite engineering-test-test
    -- Import common warning flags.
    import:           warnings
    default-language: GHC2021
    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        engineering-test,
        relude
